new sections and updates in abstract etc.

--- a/latex/Thesis/conclusions.tex
+++ b/latex/Thesis/conclusions.tex
@@ -1,9 +1,9 @@
 \chapter{Conclusion}
 
 \section{Conclusion and Future works}
-In this thesis we propose few attacks on round-reduced \KECCAK{} to cryptanalyze it. We propose a preimage attack on the $2$ rounds of round-reduced $\Keccak[r:=800-384,\,c:=384]$. This attack is practical and is also better than the existing best-known attack in terms of the time complexity. The basic idea of the attack can also be used to mount a practical preimage attack on $\Keccak[r:=400-192,\, c:=192]$ also.
+In this thesis, we propose a few attacks on round-reduced \KECCAK{} to cryptanalyze it. We propose a preimage attack on the $2$ rounds of round-reduced $\Keccak[r:=800-384,\,c:=384]$. This attack is practical and is also better than the existing best-known attack in terms of the time complexity. The basic idea of the attack can also be used to mount a practical preimage attack on $\Keccak[r:=400-192,\, c:=192]$ also.
  
 We also propose attacks for 3-round \Keccak{}-$256$ and 4-round \Keccak-$224$, there is no improvement observed in these attacks compared to the methods described in~\cite{guo2016linear} but these methods provide different structure to attack the system with the same complexity.
-From the above attacks we conclude that these attacks are far from affecting the security strength of $24$ rounds of \Keccak{}.
+From the above attacks, we conclude that these attacks are far from affecting the security strength of $24$ rounds of \Keccak{}.
 
-Further, in future, we will try to explore a practical attack for the $2$ or more rounds of round-reduced \KECCAK-$384$, \KECCAK-$512$.
+Further, in the future, we will try to explore a practical attack for $2$ or more rounds of round-reduced \KECCAK-$384$, \KECCAK-$512$.
