--- a/latex/Thesis/thesis.tex
+++ b/latex/Thesis/thesis.tex
@@ -145,6 +145,17 @@
 \AfterEndEnvironment{program}{\end{singlespace}}
 %%end novalidate
 
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=blue,
+	filecolor=magenta,      
+	urlcolor=blue,
+	citecolor=blue,
+	pdftitle={Sharelatex Example},
+	bookmarks=true,
+	pdfpagemode=FullScreen,
+}
 
 %=====================================================================
 % End of Preamble, start of document
