--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -19,7 +19,7 @@
 \author{Nikhil Mittal}
 \date{June, 2019}
 
-%  - Roll number, required for title page, approval sheet, and
+%  - Roll number, required for the title page, approval sheet, and
 %    certificate of course work 
 \rollnum{17111056} 
 
@@ -63,9 +63,11 @@
 %--------------------------------------------------------------------%
 % ABSTRACT
 \begin{abstract}
-In this thesis, we study the cryptanalysis of round reduced variants of \KECCAK{} hash function. \KECCAK{} faced a lot of cryptanalysis since it was declared as the winner of the \SHA-3 contest. The techniques such as computing partial solutions for slices,  linearization techniques etc. are used for the cryptanalysis of round-reduced \KECCAK{}. These techniques are very effective for mounting preimage attacks on 2 to 3 rounds of round-reduced \KECCAK{}. 
+The \KECCAK{} hash function is based on sponge construction which is different from previous \SHA{} standards. \SHA-3 family of hash functions is based on \Keccak{}. \Keccak{}'s excellent resistance towards crypt-analytic attacks is one of the main reasons for its selection by NIST.
+	
+In this thesis, we study the cryptanalysis of round reduced variants of \KECCAK{} hash function. \KECCAK{} faced a lot of cryptanalysis since it was declared as the winner of the \SHA-3 contest. The techniques such as computing partial solutions for slices,  linearization techniques, etc.. are used for the cryptanalysis of round-reduced \KECCAK{}. These techniques are very effective for mounting preimage attacks on 2 to 3 rounds of round-reduced \KECCAK{}. 
 
-The main contribution of the thesis is a cryptanalysis of round reduced \KECCAK-$384$ for $2$ rounds. The best known preimage attack for this variant of \KECCAK{} has the time complexity $2^{129}$. We propose a preimage attack with an improved time and space complexity of $2^{89}$. We have further analysed the linear structure technique provided by Guo \etal and suggested a better preimage attacks for 3 rounds of \KECCAK-$256$.
+The main contribution of the thesis is cryptanalysis of round reduced \KECCAK{}$[r:=800-384, c:=384]$ for $2$ rounds. The best-known preimage attack for this variant of \KECCAK{} has the time complexity of $O(2^{64})$. We propose a preimage attack with an improved time and space complexity of $O(2^{44})$. We further analyze the linear structure technique provided by Guo \etal and suggested preimage attacks for 3 rounds of \KECCAK-$256$ and 4 rounds of \KECCAK-$224$.
 \end{abstract}
 
 %--------------------------------------------------------------------%
@@ -78,7 +80,7 @@ To my family
 % Acknowledgements
 \begin{acknowledgments}
 
-I would like to thank all the people who helped me during my thesis. I also thank my thesis advisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying. I also thank the reviewers of Indocrypt-$2018$ for providing comments which helped in improving the work. In particular, we thank an anonymous reviewer for suggesting us to implement the attack on the $\Keccak[r:=400-192,\, c:=192]$ and also providing insights to further improve the attack. I would also like to thank Rajendra Kumar and Mahesh Sreekumar Rajasree for their valuable time, discussions, and guiding me in every possible way. I thank CSE, IITK department teachers for all the teachings and valuable efforts, I have learnt a lot from here because of your efforts. A special thanks to the CSE department for providing all the facilities that were required. I also thank IITK for my academic as well as personal growth.
+I would like to thank all the people who helped me during my thesis. I thank my thesis advisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying. I also thank the reviewers of Indocrypt-$2018$ for providing comments which helped in improving the work. In particular, we thank an anonymous reviewer for suggesting us to implement the attack on the $\Keccak[r:=400-192,\, c:=192]$ and also providing insights to further improve the attack. I would also like to thank Rajendra Kumar and Mahesh Sreekumar Rajasree for their valuable time, discussions, and guiding me in every possible way. I thank CSE, IITK department teachers for all the teachings and valuable efforts, I have learned a lot from here because of your efforts. A special thanks to the CSE department for providing all the facilities that were required. I also thank IITK for my academic as well as personal growth.
 \end{acknowledgments}
 
 %--------------------------------------------------------------------%
