--- a/latex/Thesis/related.tex
+++ b/latex/Thesis/related.tex
@@ -434,22 +434,44 @@ So the attack complexity for 3-round \KECCAK{}-$256$ is $2^{227}$.
 
 \section{Preimage attack on 3-round \KECCAK-224}
 
+In this section, we discuss a preimage attack for 3-round \KECCAK{}-$224$ where we try to keep the first 2 rounds linear and then build a system of 128 linear equations on 128 variables from the 224-bit hash.
+
+\KECCAK{}-$224$ has hash length $d=224$, capacity $c=448$ and rate $r = 1152 = 18$ lanes. We start with the initial state as shown in Figure~\ref{fig:3rkeccak224} where the yellow lanes represent linear variables, blue lanes represent lanes containing all bits as $1$ and white lanes represent lanes containing all bits as $0$. To prevent the spread of linear variables by $\theta$ step we add the following constraints:
+
+\begin{enumerate}
+	\item \[
+	A[0,0] = A[0,1] \oplus A[0,2] \oplus A[0, 3]
+	\]
+	\item \[
+	A[2,0] = A[2,1] \oplus A[2,2] \oplus A[2,3]
+	\]
+\end{enumerate}
+
 \begin{figure}[H]
 	\includegraphics[scale=0.7]{3R,Keccak-224.pdf}
 	\caption{Preimage attack on 3-round \KECCAK-$224$}
 	\label{fig:3rkeccak224}
 \end{figure}
 
+Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ doesn't spread. Moreover, the parity of column-$1$ and column-$3$ is $1$ which causes the increase in the number of lanes containing all bits as $1$ after $\theta$ as shown in the second state of Figure~\ref{fig:3rkeccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in the third state. Further, on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms in this state this is primarily due to the values of the rows input to $\chi$. With this, the first round is complete and the output state i.e. fourth state is still linear.
+
+We now proceed with the second round, since there are $4$ columns in the fourth state with linear terms of Figure~\ref{fig:3rkeccak224}. These linear variables will spread after the $\theta$ step, to prevent this we constraint the parity of these $4$ columns to be random constants. After applying the $\theta$ step we obtain the fifth state where the yellow lanes represent the linear variables and gray lanes represent constants. On the application of $\pi \circ \rho$ on the fifth state, the position of all lanes is permuted. Now after applying $\iota \circ \chi$ on the sixth state we observe that all the lanes in the seventh state contain linear terms, this is primarily due to atmost 2 linear terms in some rows of the state input to $\chi$ as explained in observation~\ref{ob5}. Due to this the complete row after applying $\chi$ contains linear terms. With this, the second round is complete and the output state i.e. seventh state where all lanes are linear as shown in~\ref{fig:3rkeccak224}.
+
+Further, we start with the third round. After applying $\pi \circ \rho \circ \theta$ steps on the seventh state we obtain state $A$ which is linear as all these steps are linear mappings. For \Keccak{}-$224$, the hash state comprises of $3$ lanes and $32$ bits in the 4th lane. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we don't have value of complete row. For this attack we can use observation~\ref{ob3} for the first 32 slices of the hash state and obtain 4 linear equations on the state $A$ i.e. input state to the $\chi$ step of third round. In the initial state, we have $8$ yellow lanes and after applying conditions for the first and second rounds of $\theta$ we are left with $8 - 2 - 4 = 2$ variable lanes. Therefore, the size of the linear structure is $2$ lanes = $128$ bits. All the bits in state $A$ are expressed in the form of these $128$ variables, we setup $128$ linear equations on $128$ variables from a $224$-bit hash value. We expect a complexity gain over bruteforce of $2^{128}$ and then can expect a correct preimage in $2^{224 - 128} = 2^{96}$ tries. The complexity of this attack is $O(2^{96})$.
+
 \section{Preimage attack on 4-round \KECCAK-224}
     
 In this section, we discuss a preimage attack for 4-round \KECCAK{}-$224$ where we try to keep the first 2 rounds linear and then linearize the initial state of the 4th round to be able to match some bits of the hash.
+
+We start with the initial state as shown in Figure~\ref{fig:keccak224} where the yellow lanes represent linear variables, blue lanes represent lanes containing all bits as $1$ and white lanes represent lanes containing all bits as $0$. To prevent the spread of linear variables by $\theta$ step we add the following constraints:
+
 \begin{figure}[H]
     \includegraphics[scale=0.7]{4R,Keccak-224.pdf}
     \caption{Preimage attack on 4-round \KECCAK-$224$}
     \label{fig:keccak224}
 \end{figure}
 
-\KECCAK{}-$224$ has hash length $d=224$, capacity $c=448$ and rate $r = 1152 = 18$ lanes. We start with the initial state as shown in Figure~\ref{fig:keccak224} where the yellow lanes represent linear variables, blue lanes represent lanes containing all bits as $1$ and white lanes represent lanes containing all bits as $0$. To prevent the spread of linear variables by $\theta$ step we add the following constraints:
+
 
 \begin{enumerate}
     \item \[
